--- a/css/bootstrap-theme.css
+++ b/css/bootstrap-theme.css
@@ -2,8 +2,8 @@
  * Bootstrap v3.1.1 (http://getbootstrap.com)
  * Copyright 2011-2014 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
-
+remote change 
+*/
 .btn-default,
 .btn-primary,
 .btn-success,
